examples/diagnostics_demos/errors/ModuleMultipleModulesError.flx
module Errors.ModuleMultipleModulesError { fn a() { 1; } }
module Errors.AnotherModule { fn b() { 2; } }
